plugins {
	id 'java'
	id 'org.springframework.boot' version '3.0.2'
	id 'io.spring.dependency-management' version '1.1.0'
	id 'jacoco'
}

group = 'cz.cvut.fit.bap.parser'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'
targetCompatibility = '17'

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	runtimeOnly 'org.postgresql:postgresql'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	implementation 'org.jsoup:jsoup:1.15.3'
	testImplementation 'junit:junit:4.13.1'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	//Google geocoding API
	implementation 'com.google.maps:google-maps-services:2.1.2'
	implementation 'org.slf4j:slf4j-simple:1.7.25'
	//Schedule running
	testImplementation group: 'org.awaitility', name: 'awaitility', version: '4.2.0'
	//testing db
	testRuntimeOnly 'com.h2database:h2'
	//parsing JSON
	implementation 'org.json:json:20230227'
	//performance metrics
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-aop'
	runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
}

test {
	useJUnitPlatform()
	finalizedBy jacocoTestReport
}

